--- a/roles/xitee-homework/tasks/user.yml
+++ b/roles/xitee-homework/tasks/user.yml
@@ -1,7 +1,7 @@
 ---
 - name: Create user xitest
   ansible.builtin.user:
-    name: xitest
+    name: "{{ username }}"
     comment: Devops Homework
     state: present
     password: "{{ xitest_pass }}"
@@ -9,7 +9,7 @@
 
 - name: Add authorized keys for xitest user
   ansible.posix.authorized_key:
-    user: xitest
+    user: "{{ username }}"
     state: present
     key: '{{ item }}'
   with_file:
