--- a/xitee-homework.yml
+++ b/xitee-homework.yml
@@ -2,5 +2,7 @@
 - name: Install and setup wordpress
   hosts: localhost
   become: true
+  vars:
+    ansible_python_interpreter: /usr/bin/python3
   roles:
     - role: xitee-homework
