--- a/roles/xitee-homework/tasks/httpd.yml
+++ b/roles/xitee-homework/tasks/httpd.yml
@@ -22,8 +22,10 @@
 
 - name: Permit traffic in default zone for http service
   ansible.posix.firewalld:
+    zone: public
     service: http
     permanent: true
     state: enabled
+    immediate: true
   notify:
     Reload_firewalld
