--- a/roles/xitee-homework/files/welcome.conf
+++ b/roles/xitee-homework/files/welcome.conf
@@ -8,7 +8,7 @@
 <VirtualHost *:80>
 
 ServerName wordpress.xitee.com
-
+DocumentRoot /var/www/html/wordpress/
 </VirtualHost>
 <LocationMatch "^/+$">
     Options -Indexes
