--- a/roles/xitee-homework/defaults/main.yml
+++ b/roles/xitee-homework/defaults/main.yml
@@ -7,3 +7,4 @@ remi_repo_gpg_key_url: https://rpms.remirepo.net/RPM-GPG-KEY-remi2018
 remi_repo_url: https://rpms.remirepo.net/enterprise/remi-release-8.rpm
 wordpress_url: https://wordpress.org/latest.tar.gz
 wordpress_docroot: /var/www/html/wordpress
+backup_dir: /var/backup/
