--- a/roles/xitee-homework/vars/main.yml
+++ b/roles/xitee-homework/vars/main.yml
@@ -1,5 +1,4 @@
 ---
 # vars file for roles/wordpress
 xitest_pass: $6$piFgg3L2kYlG950T$EOc0XfBXAVxoScdV6p9yMNMtiI4tq42V1K/PL.4m2oLQiHEL2OnqHIUQU2uPwrkadlygaW8SU7PUa.ocmfAs71
-
-mysql_wordpress_pass: $6$piFgg3L2kYlG950T$EOc0XfBXAVxoScdV6p9yMNMtiI4tq42V1K/PL.4m2oLQiHEL2OnqHIUQU2uPwrkadlygaW8SU7PUa.ocmfAs71
+db_pass: nonprod
